Fix share button float issue on smaller screens.

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -186,8 +186,8 @@ article {
 	}
 	
 	div.sharing {
-		width:720px;
-		float:right;
+		margin-left:240px;
+		float:left;
 		
 		.tweet {
 			float:left;
